# Total_Perspective_Vortex

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  create_tpv_fields.sh  log.make  log.txt  mutmut-results.txt  mybci.py  pyproject.toml  requirements.txt  show
.github/workflows/: ci.yml
data/: log.txt
data/S001/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  R07_X.npy  R08_X.npy  R09_X.npy  R09_y.npy
data/S002/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  R07_X.npy  R07_y.npy  R08_X.npy  R08_y.npy
data/S003/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  R07_X.npy  R07_y.npy  R08_X.npy
data/S004/: R03_X.npy  R04_X.npy  R04_y.npy  R05_X.npy  R05_y.npy  R06_X.npy  R07_X.npy  R07_y.npy  R08_X.npy
data/S005/: R03_X.npy  R04_X.npy  R05_X.npy  R06_X.npy  R06_y.npy  R07_X.npy  R08_X.npy
data/S006/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  R07_X.npy  R08_X.npy  R08_y.npy
data/S007/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R05_y.npy  R06_X.npy  R07_X.npy  R07_y.npy  R08_X.npy
data/S008/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  R06_y.npy  R07_X.npy  R08_X.npy
data/S009/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  R06_y.npy  R07_X.npy  R07_y.npy  R08_X.npy  R08_y.npy
data/S010/: R03_X.npy  R03_y.npy  R04_X.npy  R04_y.npy  R05_X.npy  R05_y.npy  R06_X.npy  R07_X.npy  R07_y.npy  R08_X.npy
data/S011/: R03_X.npy  R04_X.npy  R05_X.npy  R05_y.npy  R06_X.npy  R07_X.npy  R08_X.npy
data/S012/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  R07_X.npy  R08_X.npy
data/S013/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R05_y.npy  R06_X.npy  R07_X.npy  R08_X.npy
data/S014/: R03_X.npy  R04_X.npy  R04_y.npy  R05_X.npy  R05_y.npy  R06_X.npy  R06_y.npy  R07_X.npy  R08_X.npy
data/S015/: R03_X.npy  R03_y.npy  R04_X.npy  R04_y.npy  R05_X.npy  R06_X.npy  R07_X.npy  R08_X.npy
data/S016/: R03_X.npy  R03_y.npy  R04_X.npy  R04_y.npy  R05_X.npy  R05_y.npy  R06_X.npy  R07_X.npy  R08_X.npy  R08_y.npy
data/S017/: R03_X.npy  R04_X.npy  R05_X.npy  R06_X.npy  R07_X.npy  R08_X.npy  R08_y.npy
data/S018/: R03_X.npy  R04_X.npy  R04_y.npy  R05_X.npy  R06_X.npy  R06_y.npy  R07_X.npy  R08_X.npy
data/S019/: R03_X.npy  R04_X.npy  R04_y.npy  R05_X.npy  R06_X.npy  R06_y.npy  R07_X.npy  R08_X.npy  R08_y.npy
data/S020/: R03_X.npy  R04_X.npy  R05_X.npy  R06_X.npy  R07_X.npy  R07_y.npy  R08_X.npy  R08_y.npy
data/S021/: R03_X.npy  R04_X.npy  R05_X.npy  R05_y.npy  R06_X.npy  R07_X.npy  R08_X.npy
data/S022/: R03_X.npy  R04_X.npy  R04_y.npy  R05_X.npy  R06_X.npy  R06_y.npy  R07_X.npy  R08_X.npy
data/S023/: R03_X.npy  R04_X.npy  R04_y.npy  R05_X.npy  R05_y.npy  R06_X.npy  R06_y.npy  R07_X.npy  R08_X.npy  R08_y.npy
data/S024/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  R07_X.npy  R07_y.npy  R08_X.npy  R08_y.npy
data/S025/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  R07_X.npy  R08_X.npy
data/S026/: R03_X.npy  R03_y.npy  R04_X.npy  R05_X.npy  R06_X.npy  (+4 more)
docs/: .~lock.Total_Perspective_Vortex.fr.subject.odt#  Total_Perspective_Vortex.fr.subject.odt  index.md
mutants/: None  mutmut-stats.json  mybci.py  pyproject.toml
scripts/: __init__.py  aggregate_accuracy.py  aggregate_experience_scores.py  aggregate_scores.py  benchmark.py  download_dataset.py  experiment_type_scores.py  fetch_physionet.py  import_murphy_issues.py  import_murphy_to_project.py  predict.py  prepare_physionet.py  sanitizer.py  sync_dataset.py  train.py  visualize_eval_dashboard.py  visualize_raw_filtered.py
tests/: test_aggregate_scores_cli.py  test_benchmark.py  test_classifier.py  test_dimensionality.py  test_docs.py  test_download_dataset.py  test_experience_scores.py  test_experiment_type_scores.py  test_features.py  test_fetch_physionet.py  test_makefile_download_dataset.py  test_makefile_train_predict.py  test_mybci.py  test_pipeline.py  test_predict_cli.py  test_predict_evaluate_run.py  test_predict_load_data.py  test_predict_reports.py  test_prepare_physionet.py  test_preprocessing.py  test_realtime.py  test_sanitizer.py  test_scripts_roundtrip.py  test_sync_dataset.py  test_tpv_entrypoints.py  test_train.py  test_train_cli.py  test_utils.py  test_visualize_eval_dashboard.py  test_visualize_raw_filtered.py
(+4745 files in other folders)
