[tool.poetry]
name = "total-perspective-vortex"
version = "0.1.0"
description = "EEG Brain-Computer Interface pipeline for the Total Perspective Vortex project."
authors = ["raveriss <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tpv", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26"
pandas = "^2.2"
scipy = "^1.11"
scikit-learn = "^1.3"
mne = "^1.6"
matplotlib = "^3.8"
joblib = "^1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-timeout = "^2.3"
pytest-randomly = "^3.15"
hypothesis = "^6.112"
mypy = "^1.11"
ruff = "^0.6"
black = "^24.10"
isort = "^5.13"
bandit = "^1.7"
mutmut = "^3.0"
radon = "^6.0"
xenon = "^0.9"
pre-commit = "^4.0"
pip-audit = "^2.7"
coverage = "^7.6"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["mybci", "tpv"]
src_paths = ["src", "scripts", "tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "PL", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mybci", "tpv"]

[tool.mutmut]
paths_to_mutate = ["mybci.py"]
tests_dir = ["tests"]
pytest_add_cli_args = ["-q"]
mutate_only_covered_lines = true

[tool.pytest.ini_options]
pythonpath = ["src", ".", ".."]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
files = "src scripts tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
